Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48732

Crash in qt_pixmapFromWinHICON

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.0 Beta
    • 5.5.0
    • GUI: Painting
    • None
    • 957fb9fb82f6852e4d94bdce27892598e00bc677 (qtbase/5.6, 14.10.2015, 5.6b)

    Description

      in qpixmap_win.cpp function qt_pixmapFromWinHICON calls qt_imageFromWinIconHBITMAP but doesn't check if returned QImage is null and starts reading its memory based on earlier set x and y.

      This is in our experience often caused by getDiBits: GetDIBits(). The reason why getDiBits fails is the Windows error "User stopped resource enumeration" 15106 (0x3B02) ERROR_RESOURCE_ENUM_USER_STOP. Some details about the error http://www.pcrpr.com/error_resource_enum_user_stop.php.

      Attachments

        For Gerrit Dashboard: QTBUG-48732
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            jtykka Jani Tykkä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes