qt_pixmapFromWinHICON(): Fix crash and leak in case of Win32 API fails.

Release the DC and move alpha-checking into separate function
to prevent it from using invalid width/height.

Task-number: QTBUG-48732
Change-Id: Iaf7cfa89b0f702f5012b0451d24a9e887d832c59
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>

cregit: 957fb9fb82f6852e4d94bdce27892598e00bc677 https://github.com/qt/qtbase/commit/957fb9fb82f6852e4d94bdce27892598e00bc677